test_regress/t/t_do_while_continue_bad.out
%Warning-INFINITELOOP: t/t_do_while_continue_bad.v:12:5: Infinite loop (condition always true)
   12 |     do begin
      |     ^~
                       ... For warning description see https://verilator.org/warn/INFINITELOOP?v=latest
                       ... Use "/* verilator lint_off INFINITELOOP */" and lint_on around source to disable this message.
%Error: Exiting due to
